# advent-of-code

./: .gitignore  .gitmodules  Gemfile  LICENSE  LICENSE.md  README.md  advent-of-code.el  aoc.opam  aoc2015.opam  aoc2017.opam  aoc2018.opam  aoc2019.opam  aoc2020.opam  common-jbuild  default.nix  download-input.sh  dune-project  flake.nix  gemset.nix  get-input.sh  shell.nix  start.sh
.github/workflows/: main.yml
01/: a.ml  b.ml  dune  jbuild  main.ml  sol2.rb
02/: a.ml  b.ml  dune  jbuild  main.ml
03/: a.ml  b.ml  claim.ml  dune  jbuild  main.ml  sol1.rb  sol2.rb
04/: a.ml  b.ml  dune  jbuild  main.ml
05/: a.ml  b.ml  dune  jbuild  main.ml
06/: a.ml  b.ml  dune  jbuild  main.ml  sol1.rb  sol2.rb
07/: a.ml  b.ml  dep.ml  dune  main.ml
08/: a.ml  b.ml  dune  sol2.rb  tree.ml
09/: a.ml  b.ml  circle.ml  dune  main.ml  output  sol2.rb
10/: a.ml  b.ml  dune  main.ml
11/: a.ml  b.ml  dune  main.ml  sol1.rb  sol2.rb
12/: a.ml  b.ml  dune  main.ml  state.ml
13/: a.ml  b.ml  carts.ml  dune  main.ml  main.mli  sol1.rb  tracks.ml
14/: a.ml  b.ml  cocoa.ml  dune  main.ml  sol1.rb  sol2.rb
15/: a.ml  b.ml  battlefield.ml  battlefield.mli  dune  loc.mli  main.ml  min_heap.rb  pqueue.rb  sol1.rb  sol2.rb  team.ml  team.mli  test_min_heap.rb
16/: a.ml  b.ml  insn.ml  insn.mli  main.ml  sol1.rb  sol2.rb
17/: a.ml  b.ml  dune  main.ml
18/: a.ml  b.ml  dune  main.ml
19/: a.ml  b.ml  main.ml
20/: a.ml  b.ml  main.ml
2015/: .dir-locals.el  LICENSE.md  aoc2015.opam  shell.nix
2015/01/: dune  main.ml
2015/02/: dune  main.ml
2015/03/: dune  main.ml
2015/04/: dune  main.ml
2015/05/: dune  main.ml
2015/06/: dune  main.ml
2015/07/: dune  main.ml
2015/08/: dune  main.ml
2015/09/: dune  main.ml
2015/10/: dune  main.ml
2015/11/: dune  main.ml
2015/12/: dune  main.ml
2015/13/: dune  main.ml
2015/14/: dune  main.ml
2015/15/: dune  main.ml
2015/16/: dune  main.ml
2015/17/: dune  main.ml
2015/18/: dune  main.ml
2015/19/: dune  main.ml
2015/20/: dune  main.ml
2015/21/: dune  main.ml
2015/22/: dune  main.ml
2015/23/: dune  main.ml
2015/24/: dune  main.ml
2015/25/: dune  main.ml
2015/day_1/: dune  import.ml  main.ml
2015/day_10/: dune  main.ml
2015/day_11/: dune  main.ml
2015/day_12/: dune  main.ml
2015/day_13/: dune  main.ml
2015/day_14/: dune  main.ml
2015/day_15/: dune  main.ml
2015/day_16/: dune  main.ml
2015/day_17/: dune  main.ml
2015/day_18/: dune  main.ml
2015/day_19/: dune  main.ml
2015/day_2/: dune  main.ml
2015/day_20/: dune  import.ml  main.ml
2015/day_21/: dune  main.ml
2015/day_22/: dune  main.ml
2015/day_23/: dune  main.ml
2015/day_24/: dune  main.ml
2015/day_25/: dune  main.ml
2015/day_3/: dune  main.ml
2015/day_4/: dune  main.ml
2015/day_5/: dune  main.ml
2017/: .dir-locals.el  README.md  aoc2017.opam
2017/.github/workflows/: main.yml
2017/01/: a.ml  b.ml
2017/02/: a.ml  b.ml
2017/03/: a.ml  b.ml
2017/04/: b.ml
2017/05/: a.ml  b.ml
2017/06/: a.ml  b.ml  dune
2017/07/: a.ml  b.ml
2017/08/: a.ml  b.ml
2017/09/: a.ml  b.ml  dune
2017/10/: a.ml  b.ml
2017/11/: dune
2017/12/: a.ml  b.ml
2017/13/: a.ml  b.ml
2017/14/: a.ml  b.ml  dune
2017/15/: b.ml
2017/16/: b.ml
2017/17/: a.ml
2017/18/: a.ml  b.ml  dune
2017/19/: b.ml
2017/20/: a.ml  b.ml  dune
2017/21/: a.ml  b.ml
2017/22/: a.ml  b.ml
2017/23/: b.ml  program.txt
2017/24/: a.ml  b.ml
2017/25/: a.ml
2018/: .dir-locals.el  aoc2018.opam
2019/: .dir-locals.el  .gitignore  aoc2019.opam  dune-project  get-input.sh  new.sh
2019/01/: dune  input  main.ml
2019/02/: dune  main.ml
2019/03/: dune  main.ml
2019/04/: dune  main.ml
2019/05/: dune  import.ml  main.ml
2019/06/: dune  main.ml
2019/07/: dune  main.ml
2019/08/: dune  main.ml
2019/09/: dune  main.ml
2019/10/: dune  main.ml
2019/11/: dune  main.ml
2019/12/: dune  main.ml
2019/13/: dune  input  main.ml
2019/14/: dune  main.ml
2019/15/: dune  main.ml
2019/16/: dune  main.ml
2019/17/: dune  main.ml
2019/18/: bitset.ml  bitset.mli  dune  import.ml  main.ml
2019/19/: dune  main.ml
2019/20/: dune  main.ml
2019/21/: dune  main.ml
2019/22/: dune  input  main.ml
2019/23/: dune  main.ml
2019/24/: dune  main.ml
2019/25/: dune  init.txt  main.ml
2019/graph/src/: dune  graph.ml  graph.mli
2019/graph/test/: dune
2019/intcode/: dune  program.ml  program.mli
2019/robot/: dir.mli  dune  point.ml  robot.ml  robot.mli
2019/template/: main.ml
2020/: .dir-locals.el  .gitignore  aoc2020.opam  aoc2020.opam.template  dune-project  shell.nix  start.sh
2020/day_18/: dune  main.ml
2020/day_20/: dune  main.ml
2020/day_22/: dune  import.ml  main.ml
2021/: .dir-locals.el  Makefile  download-input.sh  shell.nix
2022/: .dir-locals.el
2023/: .dir-locals.el
21/: a.ml  b.ml  main.ml
22/: a.ml  b.ml  main.ml
23/: a.ml  b.ml  main.ml
24/: a.ml  b.ml  dune  main.ml
25/: a.ml  b.ml
day_02/: main.ml
day_03/: dune  main.ml
day_04/: main.ml
day_1/: dune  main.ml
day_10/: main.ml
day_11/: dune  main.ml
day_12/: dune  main.ml
day_13/: dune  main.ml
day_14/: main.ml
day_15/: dune  main.ml
day_16/: dune  main.ml
day_17/: main.ml
day_18/: main.ml
day_19/: main.ml
day_2/: dune  main.ml
day_20/: main.ml
day_21/: dune  main.ml
day_22/: main.ml
day_23/: main.ml
day_24/: main.ml
day_25/: dune  main.ml
day_3/: dune  main.ml
day_4/: dune  main.ml
day_5/: dune  main.ml
day_6/: dune  main.ml
day_7/: dune  main.ml
day_8/: main.ml
day_9/: dune  main.ml
elisp/: README.md  advent-of-code.el
input_helpers/: advent_of_code_input_helpers.ml  advent_of_code_input_helpers.mli  dune
intcode/: dune  program.ml  program.mli
lattice/: advent_of_code_lattice_geometry.ml  advent_of_code_lattice_geometry.mli  coord.ml  coord2.ml  coord2.mli  dir.ml  dir_intf.ml  dune  grid.ml  grid.mli  ship.ml  ship.mli  vec2.ml  vec2.mli
robot/: dir.ml  dir.mli  point.ml  point.mli  robot.ml  robot.mli
template/: a.ml  dune  import.ml  main.ml  sol1.rb
(+375 files in other folders)
