opam-version: "2.0"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: [ "Aaron L. Zeng <me@bcc32.com>" ]
tags: []
license: "MIT"
homepage: "https://github.com/bcc32/advent-of-code-2018"
dev-repo: "git+https://github.com/bcc32/advent-of-code-2018/issues"
bug-reports: "https://github.com/bcc32/advent-of-code-2018/issues"
doc: "https://adventofcode.com"
build: [
  ["dune" "subst" ] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"               {>= "4.07"}
  "dune"                {build}
  "core"                {>= "v0.12" & < "v0.13"}
  "async"               {>= "v0.12" & < "v0.13"}
  "expect_test_helpers" {>= "v0.12" & < "v0.13"}
  "re"                  {>= "v0.12" & < "v0.13"}
  "bignum"              {>= "v0.12" & < "v0.13"}
  "ppx_jane"            {>= "v0.12" & < "v0.13"}
]
synopsis: "Advent of Code 2019 solutions"
