opam-version: "2.0"
maintainer: "Aaron L. Zeng <me@bcc32.com>"
authors: [ "Aaron L. Zeng <me@bcc32.com>" ]
tags: []
license: "MIT"
homepage: "https://github.com/bcc32/advent-of-code-2019"
dev-repo: "git+https://github.com/bcc32/advent-of-code-2019/issues"
bug-reports: "https://github.com/bcc32/advent-of-code-2019/issues"
doc: "https://adventofcode.com"
build: [
  ["dune" "subst" ] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"               {>= "4.07"}
  "dune"                {build}
  "re"                  {>= "1.9.0"}
  "async"               {>= "v0.13" & < "v0.14"}
  "bignum"              {>= "v0.13" & < "v0.14"}
  "core"                {>= "v0.13" & < "v0.14"}
  "expect_test_helpers" {>= "v0.13" & < "v0.14"}
  "ppx_jane"            {>= "v0.13" & < "v0.14"}
  "notty_async"         {>= "v0.13" & < "v0.14"}
  "topological_sort"    {>= "v0.13" & < "v0.14"}
]
synopsis: "Advent of Code 2019 solutions"
