(lang dune 2.0)
(name aoc)
(generate_opam_files true)
(license MIT)
(authors "Aaron L. Zeng <me@bcc32.com>")
(maintainers "Aaron L. Zeng <me@bcc32.com>")
(source (github bcc32/advent-of-code))

(package
 (name aoc)
 (synopsis "Advent of Code solutions")
 (depends
  (dune                      (>= 2.0))
  (angstrom                  (>= 0.15.0))
  (cmdliner                  (and (>= 1.0.0) (< 2.0.0)))
  (re                        (>= 1.9.0))
  (yojson                    (>= 1.7.0))
  (async                     (and (>= v0.14) (< v0.15)))
  (bignum                    (and (>= v0.14) (< v0.15)))
  (core                      (and (>= v0.14) (< v0.15)))
  (core_bench                (and (>= v0.14) (< v0.15)))
  (delimited_parsing         (and (>= v0.14) (< v0.15)))
  (expect_test_helpers_async (and (>= v0.14) (< v0.15)))
  (ppx_jane                  (and (>= v0.14) (< v0.15)))
  (notty_async               (and (>= v0.14) (< v0.15)))
  (topological_sort          (and (>= v0.14) (< v0.15)))))
