(lang dune 2.0)
(name aoc)
(generate_opam_files true)
(license MIT)
(authors "Aaron L. Zeng <me@bcc32.com>")
(maintainers "Aaron L. Zeng <me@bcc32.com>")
(source (github bcc32/advent-of-code))

(package
 (name aoc)
 (synopsis "Advent of Code solutions")
 (depends
  (dune                      (>= 2.0))
  (angstrom                  (>= 0.15.0))
  (cmdliner                  (and (>= 1.0.0) (< 2.0.0)))
  (re                        (>= 1.9.0))
  (yojson                    (>= 1.7.0))
  (async                     (and (>= v0.15) (< v0.16)))
  (bignum                    (and (>= v0.15) (< v0.16)))
  (core                      (and (>= v0.15) (< v0.16)))
  (core_bench                (and (>= v0.15) (< v0.16)))
  (delimited_parsing         (and (>= v0.15) (< v0.16)))
  (expect_test_helpers_async (and (>= v0.15) (< v0.16)))
  (ppx_jane                  (and (>= v0.15) (< v0.16)))
  (notty_async               (and (>= v0.15) (< v0.16)))
  (topological_sort          (and (>= v0.15) (< v0.16)))))
