(lang dune 2.0)
(name aoc2019)
(generate_opam_files true)

(license       MIT)
(authors       "Aaron L. Zeng <me@bcc32.com>")
(maintainers   "Aaron L. Zeng <me@bcc32.com>")
(source        (github bcc32/advent-of-code-2019))
(documentation "https://adventofcode.com")

(package
 (name aoc2019)
 (synopsis "Advent of Code 2019 solutions")
 (depends
  (dune                (>=  2.0))
  (re                  (>=  1.9.0))
  (async               (and (>= v0.13) (< v0.14)))
  (bignum              (and (>= v0.13) (< v0.14)))
  (core                (and (>= v0.13) (< v0.14)))
  (expect_test_helpers (and (>= v0.13) (< v0.14)))
  (ppx_jane            (and (>= v0.13) (< v0.14)))
  (notty_async         (and (>= v0.13) (< v0.14)))
  (topological_sort    (and (>= v0.13) (< v0.14)))))
