(library
 (name year2020_day_20_solution)
 (libraries advent_of_code_input_helpers advent_of_code_lattice_geometry
   async bignum core euler expect_test_helpers_async expect_test_helpers_core
   re topological_sort)
 (inline_tests
  (deps input.txt input.example.txt))
 (preprocess
  (pps ppx_jane)))
